syntax = "proto3"; // Define a language version of protobuff

option java_multiple_files = true; // Allow to create multiple .java files for this proto file
option java_package = "com.demo"; // The package that will be created the java files
option java_outer_classname = "HelloGrpcProto";

package hello;

// "service" is an interface of the service
// "rpc" is used to define an RPC service
service HelloGrpc {
    rpc SayHello (HelloRequest) returns (HelloReply) {}

    rpc StreamRandomNumbers (NumberRequest) returns (stream NumberResponse) {}

    rpc GetProductById (ProductIdRequest) returns (ProductResponse);

    rpc InsertProduct (ProductRequest) returns (ProductResponse) {}
}

// "message" is an object used in method parameter or in return of it
message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}


message NumberRequest {
    int64 count = 1;
}

message NumberResponse {
    int64 index = 1;
    int64 value = 2;
}


message ProductIdRequest {
    int64 id = 1;
}

message ProductResponse {
    string name = 1;
    string price = 2;
    int32 quantity = 3;
}


message ProductRequest {
    string name = 1;
    string price = 2;
    int32 quantity = 3;
}